[package]
name = "sila"
version = "0.1.0"
edition = "2021"
description = "Simple Instructive Language"
authors = ["MOBSkuchen"]

[dependencies]
annotate-snippets = "0.11.5"
anstream = "0.6.18"
colorize-rs = "0.1.2"

[profile.release]
lto = true
opt-level = "z"
# panic = "abort"
codegen-units = 1
strip = true
